part3/3.02.BackToIngress/ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: ping-pong-ns
  labels:
    name: ping-pong-ns
