part3/3.02.BackToIngress/ping-pong-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-deploy
  namespace: ping-pong-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-deploy
  template:
    metadata:
      labels:
        app: ping-pong-deploy
    spec:
      containers:
        - name: ping-pong
          image: ghcr.io/antoine29/ping-pong:latest
