part3/3.02.BackToIngress/log-output-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: ping-pong-ns
spec:
  type: NodePort
  selector:
    app: log-output-deploy
  ports:
    - name: http
      protocol: TCP
      port: 81
      targetPort: 80
