part3/3.02.BackToIngress/ping-pong-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: ping-pong-ns
spec:
  type: NodePort
  selector:
    app: ping-pong-deploy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
